--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react",
   "version": "0.0.1-SNAPSHOT",
   "description": "",
-  "author": "",
+  "author": "John Kasper Svergja",
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "rest": "^1.3.1",
-    "webpack": "^1.12.2"
+    "react": "^16.0.2",
+    "react-dom": "^16.0.2",
+    "webpack": "^2.5.1",
+    "react-router-dom": "4.2.0"
   },
   "scripts": {
     "watch": "webpack --watch -d"
@@ -17,6 +17,10 @@
     "babel-loader": "^6.2.7",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "@types/react": "16.0.2",
+    "@types/react-dom": "16.0.2",
+    "@types/react-router": "4.2.0",
+    "@types/react-router-dom": "4.2.2"
   }
 }
