--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.jpa.hibernate.ddl-auto=create
-#Mysql databased run in docker. Command to get started (IP needs to be double checked)
+
+#Mysql database:
+#Command to get started with mysql in docker:
 #docker run -p 3306:3306 -e MYSQL_ROOT_PASSWORD=password -d mysql
-spring.datasource.url=jdbc:mysql://192.168.99.101:3306/oslomet?verifyServerCertificate=false&useSSL=true&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
+#PS: datasource.url needs to be updated to match the containers url.
+#spring.datasource.url=jdbc:mysql://192.168.99.101:3306/oslomet?verifyServerCertificate=false&useSSL=true&createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=password
 
 #For in-memory database
-#spring.datasource.url = jdbc:hsqldb:mem:oslomet
-#spring.datasource.username = sa
-#spring.datasource.password =
-#spring.datasource.driverClassName = org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url = jdbc:hsqldb:mem:oslomet
+spring.datasource.username = sa
+spring.datasource.password =
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
