--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>com.s305089.software</groupId>
 	<artifactId>oslomet-asgmt3</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.4.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>oslomet-asgmt3</name>
-	<description>Assignment 3 - DAVE3615</description>
+	<name>oslomet-asgmt-3-and-4</name>
+	<description>Assignment 3 and 4 - DAVE3615</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
